# mAIgic-nyu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.py  assistant.py  bot.py  calendar_sync.py  chat.py  credentials.json  dummy.py  gmail.py  gmail_bot.py  gmail_example.py  gpt.py  hello.py  maigic-assistant-key.json  pyproject.toml  requirements.txt  server.py  slack.py  test.py  test_file.py  trello_bot.py
.circleci/: config.yml
SlackChatbot/: .gitignore  ClientID_Secret.env  Commands  Readme  api.py  slack_bot.py  slack_events.py  slack_oauth.py
SlackChatbot/utils/: config.py  slack_utils.py  trello_utils.py
config/: .env
ky_ai_assistant_api/: pyproject.toml
ky_ai_assistant_api/src/ky_ai_assistant_api/: __init__.py
ky_ai_assistant_openai/: pyproject.toml
ky_ai_assistant_openai/src/ky_ai_assistant_openai/: __init__.py  _impl.py
ky_cc_calculator/: CMakeLists.txt  calculator.cc  calculator.h  py_calculator.cc
ky_cc_calculator_2/: CMakeLists.txt  calculator2.cc  calculator2impl.cc  registrar.cc
ky_cc_calculator_2/include/ky/calculator2/: api.h  registrar.h
ky_cc_calculator_2/include/ky/calculator2seed/: calculator2seed.h
ky_cc_calculator_3/: CMakeLists.txt  calculator3.cc
ky_cc_calculator_3/include/ky/calculator3/: calculator3.h
ky_cc_calculator_4/: CMakeLists.txt  calculator4.cc
ky_cc_calculator_4/include/ky/calculator4/: calculator4.h
ky_cc_calculator_5/: CMakeLists.txt  calculator5.cc
ky_cc_calculator_5/include/ky/calculator5/: calculator5.h
ky_cc_test/: CMakeLists.txt  test.cc
ky_mail_api/: pyproject.toml
ky_mail_api/src/ky_mail_api/: __init__.py
ky_mail_gmail_impl/: pyproject.toml
ky_mail_gmail_impl/src/ky_mail_gmail_impl/: __init__.py  _impl.py
ky_test/: credentials.json  pyproject.toml
ky_test/src/ky_test/: __init__.py
src/: TrelloManager.py  hello.py
src/calendar/: __init__.py  calendar_api.py  calendar_sync.py
src/db/: models.py
src/gmail/: API.py  __init__.py  api.py  auth.py  client.py  gmail_api.py  gmail_bot.py  main.py  models.py
src/gpt/: gpt.py
src/maigic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/maigic_nyu/: __init__.py  _temp_math.py  api.py
src/maigic_nyu/demo_api/: _demo_math.py  api.py
src/maigic_nyu/gmail/: README.md  _client.py  _models.py  api.py
src/maigic_nyu/slack/: __init__.py  slack.py
src/maigic_nyu/slackbot/: __init__.py  slackbot.py
src/slack/: __init__.py  slack.py  slack_api.py  slack_bot.py
src/trello/: __init__.py  trello_api.py  trello_bot.py
test/gmail/: test_api.py  test_auth.py  test_live_api.py
tests/: __init__.py  test_api.py  test_environment.py  test_gmail.py  test_gmail_api.py  test_hello.py  test_samples.py  test_slack.py
tests/test_calendar/: __init__.py  test_calendar_api.py  test_calendar_sync.py
tests/test_demo_api/: test_api.py
tests/test_gmail/: __init__.py  test_gmail_api.py  test_gmail_bot.py
tests/test_slack/: __init__.py  test_slack_api.py  test_slack_bot.py
tests/test_trello/: __init__.py  test_trello_api.py  test_trello_bot.py
