[project]
name = "maigic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[x]
dependencies = [
    "google-api-python-client>=2.146.0",
    "google-auth>=2.35.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-apps-chat>=0.1.11",
    "openai>=1.50.2",
    "pydantic>=2.9.2",
    "html2text>=2024.2.26",
    "slack-sdk>=3.33.1",
    "sqlalchemy>=2.0.35",
    "slack-bolt>=1.20.1",
    "trio>=0.26.2",
    "trio-asyncio>=0.15.0",
    "aiohttp>=3.10.8",
    "asyncio>=3.4.3",
    "humanreadable>=0.4.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "mypy>=1.11.2",
    "ruff>=0.6.8",
]

[tool.uv.workspace]
members = ["packages", "ky_mail_api", "ky_mail_gmail_impl", "ky_test"]
