[project]
name = "maigic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nanobind>=2.5.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "mypy>=1.11.2",
    "ruff>=0.6.8",
]

[tool.uv.workspace]
members = ["packages", "ky_mail_api", "ky_mail_gmail_impl", "ky_test", "ky_ai_assistant_api", "ky_ai_assistant_openai"]
