[project]
name = "ky-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ky-mail-api",
    "ky-mail-gmail-impl",
]

[project.scripts]
main = "ky_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ky-mail-api = { workspace = true }
ky-mail-gmail-impl = { workspace = true }
